syntax = "proto3";

package board;

import "image.proto";
import "user.proto";

service AdAPI {
    rpc GetManyAd (GetManyAdRequest) returns (PaginatedAd);
    rpc GetOneAd (GetByIdRequest) returns (Ad);
    rpc SetFavoriteAd (GetByIdRequest) returns (IsSuccess);
    rpc AddAd (ChangeAdRequest) returns (IsSuccess);
    rpc DeleteAd (GetByIdRequest) returns (IsSuccess);
    rpc MuteAd (GetByIdRequest) returns (IsSuccess);
    rpc GetFavoriteAds (Empty) returns (RepeatedAdResponse);
    rpc GetMyAds (Empty) returns (RepeatedAdResponse);
    rpc GetByUserId (GetByIdRequest) returns (RepeatedAdResponse);
    rpc LoadImage (GetByIdWithBoolRequest) returns (RepeatedImageResponse);
}

service CategoryAPI {
    rpc GetAllCategories (Empty) returns (GetAllCategoriesResponse);
}

message GetManyAdRequest {
    FilterQuery filter = 1;
    int32 limit = 2;
    int32 page = 3;
}

message FilterQuery {
    string search = 1;
    int64 price_max = 2 [jstype = JS_NUMBER];
    int64 price_min = 3 [jstype = JS_NUMBER];
    string address = 4;
    Category category = 5;
    string query = 6;
}

message GetByIdRequest {
    string id = 1;
}
message ChangeAdRequest {
    Ad ad = 1;
    repeated ImageProto images = 2;
}
message GetByIdWithBoolRequest {
    string id = 1;
    bool value = 3;
}

message PaginatedAd {
    repeated Ad data = 1;
    int64 count = 2 [jstype = JS_NUMBER];
    int64 total = 3 [jstype = JS_NUMBER];
    int32 page = 4;
    int64 page_count = 5 [jstype = JS_NUMBER];
}

message Ad {
    string id = 1;
    string title = 2;
    int64 price = 3;
    string description = 4;
    bool is_fav = 5;
    bool is_active = 6;
    int32 views = 7;
    string created = 10;
    User user = 11;
    Category category = 12;
    repeated string images = 13;
}
message RepeatedAdResponse {
    repeated Ad data = 1;
}

message RepeatedImageResponse {
    repeated ImageProto data = 1;
}

message GetAllCategoriesResponse {
    repeated Category categories = 1;
}

message Category {
    string id = 1;
    string name = 2;
    string path = 3;
}