syntax = "proto3";

package board;

import "ad.proto";
import "user.proto";

service PromptAPI {
    rpc GetManyPrompts (GetManyPromptsRequest) returns (PaginatedPrompt);
    rpc GetOnePrompt (GetByIdRequest) returns (Ad);
    rpc SetFavoritePrompt (SetFavoriteRequest) returns (Empty);
    rpc AddPrompt (ChangePromptRequest) returns (Empty);
    rpc DeletePrompt (ChangePromptRequest) returns (Empty);
    rpc MutePrompt (ChangePromptRequest) returns (Empty);
    rpc GetPerform (SetPerformRequest) returns (Empty);
}

message GetManyPromptsRequest {
    string query = 1;
    string token = 4;
}
message ChangePromptRequest {
    Prompt prompt = 1;
    string token = 2;
}

message SetPerformRequest {
    int64 id = 1;
    string token = 2;
}

message PaginatedPrompt {
    repeated Prompt data = 1;
    int64 count = 2 [jstype = JS_NUMBER];
    int64 total = 3 [jstype = JS_NUMBER];
    int64 page = 4 [jstype = JS_NUMBER];
    int64 page_count = 5 [jstype = JS_NUMBER];
}

message Prompt {
    int64 id = 1;
    string title = 2;
    int64 reward = 3;
    string description = 4;
    bool is_active = 6;
    int32 views = 7;
    repeated string images = 8;
    string address = 9;
    string created = 10;
    User owner = 11;
    User performer = 12;
    Category category = 13;
}